Bug fixed(CSS on Safari)

--- a/WebApplicationCalculator/wwwroot/css/site.css
+++ b/WebApplicationCalculator/wwwroot/css/site.css
@@ -28,12 +28,9 @@ header, footer, section {
 }
 
 header {
-    width: 160px;
+    width: 150px;
     height: 10%;
-
     display: flex;
-    display:-webkit-flex;
-
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -45,10 +42,7 @@ header {
 
 section {
     width: 700px;
-
     display: flex;
-    display: -webkit-flex;
-
     flex-direction: column;
     justify-content: space-around;
 }
@@ -60,10 +54,7 @@ section {
 footer {
     width: 400px;
     height: 5%;
-
     display: flex;
-    display: -webkit-flex;
-
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
@@ -74,24 +65,21 @@ footer {
 
 .title {
     width: 160px;
-
     display: flex;
-    display: -webkit-flex;
-
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 h1 {
-    font-family: sans-serif;
+    font-family: helvetica;
     font-size: 22px;
     font-weight: 800;
     color: white;
 }
 
 h6 {
-    font-family: sans-serif;
+    font-family: helvetica;
     font-size: 13px;
     font-weight: 800;
     color: white;
@@ -105,6 +93,7 @@ h6 {
 }
 
 .block__item {
+    display: inline-block;
     display: flex;
     display: -webkit-flex;
 }
@@ -175,10 +164,7 @@ textarea {
 
 .hbox {
     width: 100%;
-
     display: flex;
-    display: -webkit-flex;
-
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -186,8 +172,13 @@ textarea {
 
 .vbox {
     display: flex;
-    display: -webkit-flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+}
 
+.vbox_section {
+    display: flex;
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
@@ -233,6 +224,7 @@ a {
 @media (max-width: 700px) {
 
     header {
+        display: flex;
         width: 110px;
     }
 
@@ -245,15 +237,19 @@ a {
     }
 
     section {
-        width: 98%;
+        width: 100%;
     }
 
     .empty_2 {
         height: 70%;
     }
 
+    .vbox_section {
+        display: inline-block;
+    }
+
     .hbox {
-        width: 99%;
+        width: 100%;
         flex-wrap: wrap;
         margin: 0px;
         align-items: center;
@@ -269,7 +265,12 @@ a {
         width: 100%;
     }
 
+    .textoutput_3 {
+        margin: 0px;
+    }
+
     #result_notifier {
+        display: inline-block;
         font-size: 10px;
         font-weight: 600;
         padding-top: 2px;
